--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -5,13 +5,15 @@
 
 html,
 body {
-  color: $default-color;
+  color: $default-color;  
   margin: 0;
   padding: 0;
 }
 
 html {
-  font-family: $serif-primary;
+  font-family: $sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
 
   @media (min-width: 600px) {
