--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 $default-color: #555;
-$default-shade: #353535;
+$default-shade: #4e6e8e;
 $default-tint: #aaa;
 $grey-1: #979797;
 $grey-2: #e5e5e5;
