--- a/_sass/tale/_catalogue.scss
+++ b/_sass/tale/_catalogue.scss
@@ -3,11 +3,11 @@
     border-bottom: 1px solid $grey-2;
     color: $default-color;
     display: inline-block;
-    padding: 2rem 0;
+    padding: 2rem 0 0;
 
     &:hover .catalogue-line,
     &:focus .catalogue-line {
-      width: 5rem;
+      width: 6rem;
     }
 
     &:last-child {
@@ -34,6 +34,6 @@
     @include transition(all .3s ease-out);
     border-top: .2rem solid $default-shade;
     display: block;
-    width: 2rem;
+    width: 3rem;
   }
 }
