--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -1,10 +1,10 @@
 // Colors
-$default-color: #555;
+$default-color: #2c3e50;
 $default-shade: #4e6e8e;
 $default-tint: #aaa;
-$grey-1: #979797;
-$grey-2: #e5e5e5;
-$grey-3: #f9f9f9;
+$grey-1: #656565;
+$grey-2: #979797;
+$grey-3: #e5e5e5;
 $white: #fff;
 $blue: #4a9ae1;
 $shadow-color: rgba(0, 0, 0, .2);
