--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -2,8 +2,8 @@
 $default-color: #2c3e50;
 $default-shade: #4e6e8e;
 $default-tint: #aaa;
-$grey-1: #656565;
-$grey-2: #979797;
+$grey-1: #888;
+$grey-2: #ccc;
 $grey-3: #e5e5e5;
 $white: #fff;
 $blue: #4a9ae1;
