--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -46,7 +46,7 @@ blockquote {
   border-left: .25rem solid $grey-2;
   color: $grey-1;
   margin: .8rem 0;
-  padding: .5rem 1rem;
+  padding: 0 1rem;
 
   p:last-child {
     margin-bottom: 0;
