--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -2,13 +2,13 @@
 $default-color: #2c3e50;
 $default-shade: #4e6e8e;
 $default-tint: #aaa;
-$grey-1: #777;
-$grey-2: #ccc;
-$grey-3: #e5e5e5;
+$grey-1: #808077;
+$grey-2: #dedece;
+$grey-3: #f0f2f2;
 $white: #fff;
 $blue: #4a9ae1;
 $shadow-color: rgba(0, 0, 0, .2);
-$code-color: #bf616a;
+$code-color: #e96900;
 
 // Fonts
 $serif-primary: 'Libre Baskerville', 'Times New Roman', Times, serif;
