--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -2,8 +2,8 @@
 $default-color: #2c3e50;
 $default-shade: #4e6e8e;
 $default-tint: #aaa;
-$grey-1: #808077;
-$grey-2: #dedece;
+$grey-1: #707066;
+$grey-2: #dedede;
 $grey-3: #f0f2f2;
 $white: #fff;
 $blue: #4a9ae1;
