--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -45,7 +45,7 @@ a {
 blockquote {
   border-left: .25rem solid $grey-2;
   color: $grey-1;
-  margin: .8rem 0;
+  margin: 1rem 0 2rem 0;
   padding: 0 1rem;
 
   p:last-child {
