--- a/_sass/tale/_catalogue.scss
+++ b/_sass/tale/_catalogue.scss
@@ -25,9 +25,13 @@
     color: $default-shade;
     display: block;
     font-family: $sans-serif;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 700;
     margin: .5rem 0;
+
+    @media (min-width: 600px) {
+      font-size: 2rem;
+    }
   }
 
   &-line {
