--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -5,7 +5,7 @@
 
 html,
 body {
-  color: $default-color;  
+  color: $default-color;
   margin: 0;
   padding: 0;
 }
@@ -22,6 +22,7 @@ html {
 }
 
 body {
+  text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
 
@@ -43,7 +44,7 @@ a {
 }
 
 blockquote {
-  border-left: .25rem solid $grey-2;
+  border-left: 0.25rem solid $grey-2;
   color: $grey-1;
   margin: 1.5rem 0 2.2rem 0;
   padding: 0 1rem;
