增加6月16日文章，样式稍微调整

--- a/_sass/tale/_catalogue.scss
+++ b/_sass/tale/_catalogue.scss
@@ -1,8 +1,8 @@
 .catalogue {
   &-item {
     border-bottom: 1px solid $grey-2;
-    color: $default-color;
-    display: inline-block;
+    color: $grey-1;
+    display: block;
     padding: 2rem 0 0;
 
     &:hover .catalogue-line,
