--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -1,8 +1,8 @@
 // Colors
 $default-color: #2c3e50;
-$default-shade: #4e6e8e;
+$default-shade: #353535;
 $default-tint: #aaa;
-$grey-1: #707066;
+$grey-1: #808077;
 $grey-2: #dedede;
 $grey-3: #f0f2f2;
 $white: #fff;
