--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 $default-color: #2c3e50;
-$default-shade: #353535;
+$default-shade: #3a5169;
 $default-tint: #aaa;
 $grey-1: #808077;
 $grey-2: #dedede;
