增加图片缩放

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,5 +25,9 @@
         &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}. Made with Jekyll using the Tale theme.
       </span>
     </footer>
+    <script src="../assets/medium-zoom.min.js"></script>
+    <script>
+        mediumZoom(document.images);
+        </script>
   </body>
 </html>
