--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -35,7 +35,7 @@ h6 {
   color: $default-shade;
   font-family: $sans-serif;
   line-height: normal;
-  margin: 2.1rem 0;
+  margin: 3.5rem 0 1.6rem;
 }
 
 a {
